fix: ApiServiceImpl.getImageBytes() 异常处理修复 - 删除重复的 getInputStream() 调用（资源泄漏） - 添加 MalformedURLException import + catch - 添加 IllegalArgumentException catch（URI.create()） - 异常不再静默吞掉，改为 throw YyghException - 删除不可达的 return null